--- a/grid/index.html
+++ b/grid/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Grid System</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="grid.css">
   </head>
   <body>
     <div class="container">
@@ -12,7 +12,6 @@
       <div class="col-1">Col 3</div>
       <div class="col-1">Col 4</div>
       <div class="col-1">Col 5</div>
-      <div class="col-1">Col 6</div>
     </div>
   </body>
 </html>
