--- a/grid/index.html
+++ b/grid/index.html
@@ -8,10 +8,11 @@
   <body>
     <div class="container">
       <div class="col-1">Col 1</div>
-      <div class="col-1">Col 2</div>
-      <div class="col-1">Col 3</div>
-      <div class="col-1">Col 4</div>
-      <div class="col-1">Col 5</div>
+      <div class="col-2">
+        <div class="col-2">Col 1</div>
+        <div class="col-2">Col 1</div>
+      </div>
     </div>
   </body>
 </html>
+
