ps0 folder renamed, container for about page formatted

--- a/about/index.html
+++ b/about/index.html
@@ -11,12 +11,12 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-1">
+      <div class="col-1 header">
         Header
       </div>
     </div>
     <div class="row">
-      <div class="col-3">
+      <div class="col-3 description">
         Lorem ipsum dolor es et a dis vi volida mameno dulus extis
       </div>
       <div class="col-1">
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-1">
+      <div class="col-1 listing">
         <ul>
           <li><a href="terms/term_template.html">Algebra</a></li>
           <li>Bis</li>
@@ -33,7 +33,7 @@
           <li>Pis</li>
         </ul>
       </div>
-      <div class="col-1">
+      <div class="col-1 listing">
         <ul>
           <li>Amas</li>
           <li>Bis</li>
