website css done

--- a/about/index.html
+++ b/about/index.html
@@ -12,34 +12,41 @@
   <div class="container">
     <div class="row">
       <div class="col-1 header">
-        Header
+        <h1>Piotr Szyma</h1>
+        <h2>Student Informatyki WPPT</h1>
       </div>
     </div>
     <div class="row">
       <div class="col-3 description">
-        Lorem ipsum dolor es et a dis vi volida mameno dulus extis
+        <p>
+          Jestem entuzjastą informatyki pochodzącym z Częstochowy. Obecnie studiuję na Wydziale Podstawowych Problemów Techniki Politechniki Wrocławskiej.
+          Jeśli chodzi o ulubione języki, to są nimi obecnie JavaScript i Python.
+        </p>
+        <p>
+          Lwią część kodu, jaką spłodziłem podczas moich studiów, można znaleźć na <a class="link" href="https://github.com/piotrszyma">github.com/piotrszyma</a>.
+        </p>
       </div>
-      <div class="col-1">
-        PHOTO
+      <div class="col-1 profile desktop">
+        <img src="photo.jpeg">
       </div>
     </div>
     <div class="row">
       <div class="col-1 listing">
+        <h2>Moja edukacja</h2>
         <ul>
-          <li><a href="terms/term_template.html">Algebra</a></li>
-          <li>Bis</li>
-          <li>Vis</li>
-          <li>Los</li>
-          <li>Pis</li>
+          <li><a href="terms/1-semester.html">1 semestr</a></li>
+          <li><a href="terms/2-semester.html">2 semestr</a></li>
+          <li><a href="terms/3-semester.html">3 semestr</a></li>
+          <li><a href="terms/4-semester.html">4 semestr</a></li>
+          <li><a href="terms/5-semester.html">5 semestr</a></li>
         </ul>
       </div>
       <div class="col-1 listing">
+        <h2>Moje zainteresowania</h2>
         <ul>
-          <li>Amas</li>
-          <li>Bis</li>
-          <li>Vis</li>
-          <li>Los</li>
-          <li>Pis</li>
+          <li><a href="http://wmasg.pl/pl/profil/show/56069">Airsoft</a></li>
+          <li><a href="https://filmweb.pl/user/thompson2908">Kino</a></li>
+          <li><a href="https://www.last.fm/user/Thompson2908">Muzyka</a></li>
         </ul>
       </div>
     </div>
