--- a/about/terms/term_template.html
+++ b/about/terms/term_template.html
@@ -6,22 +6,45 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="../grid.css">
-  <title>{{ title }}</title>
+  <title>Semester 1</title>
 </head>
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-1">
-        {{ title }}
+      <div class="col-1 header">
+        <h1>Piotr Szyma</h1>
+        <h2>Student Informatyki WPPT</h1>
+        <h3>Studia: Semester 1 (2016/2017)</h3>
       </div>
     </div>
     <div class="row">
-      <div class="col-1">
-        Przedmioty
+      <div class="col-1 title">
+        Analiza matematyczna
       </div>
-      <div class="col-1">
-        Opis
+    </div>
+    <div class="row">
+        <div class="col-1 listing">
+          Czego się dowiedziałem?
+          <ul>
+            <li>Jak obsługiwać program Wolfram Alpha</li>
+          </ul>
+        </div>
+        <div class="col-1 description">
+          Czego warto się douczyć?
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          </p>
+        </div>
       </div>
+      <div class="row">
+          <div class="col-1 back">
+            <a href="../index.html">
+                <button>
+                    Powrót
+                </button>
+            </a>  
+          </div>
+        </div>
     </div>
   </div>
 </body>
