--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
           Jeśli chodzi o ulubione języki, to są nimi obecnie JavaScript i Python.
         </p>
         <p>
-          Lwią część kodu, jaką spłodziłem podczas moich studiów, można znaleźć na <a class="link" href="https://github.com/piotrszyma">github.com/piotrszyma</a>.
+          Lwią część kodu, jaką spłodziłem podczas moich studiów, można znaleźć na <a class="link" target="_blank" href="https://github.com/piotrszyma">github.com/piotrszyma</a>.
         </p>
       </div>
       <div class="col-1 profile desktop">
@@ -44,9 +44,10 @@
       <div class="col-1 listing">
         <h2>Moje zainteresowania</h2>
         <ul>
-          <li><a href="http://wmasg.pl/pl/profil/show/56069">Airsoft</a></li>
-          <li><a href="https://filmweb.pl/user/thompson2908">Kino</a></li>
-          <li><a href="https://www.last.fm/user/Thompson2908">Muzyka</a></li>
+          <li><a href="http://wmasg.pl/pl/profil/show/56069" target="_blank">Airsoft</a></li>
+          <li><a href="https://filmweb.pl/user/thompson2908" target="_blank">Kino</a></li>
+          <li><a href="https://www.last.fm/user/Thompson2908" target="_blank">Muzyka</a></li>
+          <li><a href="interests/html.html">Hypertext Markup Language</a></li>
         </ul>
       </div>
     </div>
