CSS & HTML validation

--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col-1 header">
         <h1>Piotr Szyma</h1>
-        <h2>Student Informatyki WPPT</h1>
+        <h2>Student Informatyki WPPT</h2>
       </div>
     </div>
     <div class="row">
@@ -27,7 +27,7 @@
         </p>
       </div>
       <div class="col-1 profile desktop">
-        <img src="photo.jpeg">
+        <img src="photo.jpeg" alt="Moje zdjęcie">
       </div>
     </div>
     <div class="row">
@@ -48,6 +48,7 @@
           <li><a href="https://filmweb.pl/user/thompson2908" target="_blank">Kino</a></li>
           <li><a href="https://www.last.fm/user/Thompson2908" target="_blank">Muzyka</a></li>
           <li><a href="interests/html.html">Hypertext Markup Language</a></li>
+          <li><a href="snake/index.html">Snake</a></li>
         </ul>
       </div>
     </div>
