--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@
           <li><a href="https://filmweb.pl/user/thompson2908" target="_blank">Kino</a></li>
           <li><a href="https://www.last.fm/user/Thompson2908" target="_blank">Muzyka</a></li>
           <li><a href="interests/html.html">Hypertext Markup Language</a></li>
-          <li><a href="snake/snake.html">Snake</a></li>
+          <li><a href="game/snake.html">Snake</a></li>
         </ul>
       </div>
     </div>
