--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
             Jeśli chodzi o ulubione języki, to są nimi obecnie JavaScript i Python.
           </p>
           <p>
-            Lwią część kodu, jaką spłodziłem podczas moich studiów, można znaleźć na <a class="link" target="_blank" href="https://github.com/piotrszyma">github.com/piotrszyma</a>.
+            Na swoim repozytorium na GitHubie publikuję moje rozwiązania list zadań ze studiów. <a class="link" target="_blank" href="https://github.com/piotrszyma">github.com/piotrszyma</a>.
           </p>
         </div>
         <div class="col-1 profile desktop">
