--- a/about/terms/4-semester.html
+++ b/about/terms/4-semester.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="../grid.css">
-  <title>Semestr 4</title>
+  <title>Semestr 1</title>
 </head>
 
 <body>
@@ -15,8 +15,8 @@
     <div class="row">
       <div class="col-1 header">
         <h1>Piotr Szyma</h1>
-        <h2>Student Informatyki WPPT</h1>
-          <h3>Studia: Semester 4 (2017)</h3>
+        <h2>Student Informatyki WPPT</h2>
+          <h3>Studia: Semester 1 (2015/2016)</h3>
       </div>
     </div>
     <div class="row">
@@ -105,8 +105,6 @@
         </a>
       </div>
     </div>
-  </div>
-  </div>
   </div>
 </body>
 
