btn as descenant

--- a/about/terms/1-semester.html
+++ b/about/terms/1-semester.html
@@ -98,11 +98,11 @@
     </div>
     <div class="row">
       <div class="col-1 back">
-        <button>
+        <div class="button">
           <a href="../index.html">
             Powrót
           </a>
-        </button>
+        </div>
       </div>
     </div>
   </div>
